--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,15 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+- stage: Build Standalone Linux
+  jobs:
+  - job: Build
+    pool:
+      vmImage: 'ubuntu-latest'
+    continueOnError: false
+    steps:
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'build'
+        projects: '**/*.csproj'
