Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,10 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
 
 stages:
 - stage: build_standalone
   jobs:
-  - job: build
+  - job: build_linux
     pool:
       vmImage: 'ubuntu-latest'
     continueOnError: false
