--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,4 +12,11 @@ stages:
     - task: DotNetCoreCLI@2
       inputs:
         command: 'build'
-        projects: '**/*.csproj'
+        projects: '''**/*.csproj'
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'publish'
+        publishWebProjects: false
+        projects: '''**/*.csproj'
+        zipAfterPublish: false
+    
