Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,6 @@ stages:
       inputs:
         command: 'publish'
         publishWebProjects: false
-        projects: '''**/*.csproj'
+        projects: '**/*.csproj'
         zipAfterPublish: false
     
