--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,19 @@ stages:
         name: macos
         vmImage: 'macOS-10.14'
         artifact: macos
+
+- stage: docker
+  jobs:
+   - job: dockerhub
+     continueOnError: false
+     steps:
+      - task: Docker@2
+        inputs:
+          command: 'build'
+          Dockerfile: '**/Dockerfile'
+      - task: Docker@2
+        inputs:
+          containerRegistry: 'DockerHub'
+          repository: 'mattiascibien/image-search-bot'
+          command: 'buildAndPush'
+          Dockerfile: '**/Dockerfile'
