Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ stages:
         artifact: dotnet_cli
 
 - stage: build
-  condition: "$(Build.Reason) != "PullRequest"
+  condition: ne($(Build.Reason) != "PullRequest)
   jobs:
     - template: .azure/build-template.yml  # Template reference
       parameters:
@@ -30,7 +30,7 @@ stages:
         artifact: macos
 
 - stage: docker
-  condition: "$(Build.Reason) != "PullRequest"
+  condition: ne($(Build.Reason) != "PullRequest)
   jobs:
    - job: dockerhub
      continueOnError: false
