--- a/.azure/build-template.yml
+++ b/.azure/build-template.yml
@@ -1,7 +1,6 @@
 parameters:
   name: ''
   artifact: ''
-  vmImage: ''
 
 jobs:
 - job: ${{ parameters.name }}
@@ -19,7 +18,7 @@ jobs:
       publishWebProjects: false
       projects: '**/*.csproj'
       zipAfterPublish: false
-      arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
+      arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory) --self-contained'
   - task: PublishBuildArtifacts@1
     inputs:
       PathtoPublish: '$(build.artifactstagingdirectory)'
