--- a/.azure/build-template.yml
+++ b/.azure/build-template.yml
@@ -1,6 +1,7 @@
 parameters:
   name: ''
   artifact: ''
+  runtime: ''
 
 jobs:
 - job: ${{ parameters.name }}
@@ -18,7 +19,7 @@ jobs:
       publishWebProjects: false
       projects: '**/*.csproj'
       zipAfterPublish: false
-      arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory) --self-contained'
+      arguments: --configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory) --self-contained -r ${{ parameters.runtime }}
   - task: PublishBuildArtifacts@1
     inputs:
       PathtoPublish: '$(build.artifactstagingdirectory)'
