--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ stages:
         name: windows
         vmImage: 'windows-2019'
         artifact: windows
-        runitme: win-x64
+        runtime: win-x64
     - template: .azure/build-template.yml  # Template reference
       parameters:
         name: macos
