Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ stages:
     - template: .azure/build-test.yml  # Template reference
 
 - stage: build
-  #condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
   jobs:
     - template: .azure/build-template.yml  # Template reference
       parameters:
@@ -30,27 +30,6 @@ stages:
         vmImage: 'macOS-10.14'
         artifact: macos
         runtime: osx-x64
-    - job: release
-      dependsOn:
-        - linux
-        - windows
-        - macos
-      steps:
-      - task: GitHubRelease@0
-        inputs:
-          gitHubConnection: 'github.com'
-          repositoryName: 'mattiascibien/image-search-bot'
-          action: 'create'
-          target: '$(Build.BuildNumber)'
-          tagSource: 'manual'
-          tag: '$(Build.BuildNumber)'
-          title: 'ImageSearchBot $(Build.BuildNumber)'
-          releaseNotesSource: 'input'
-          releaseNotes: 'Nope'
-          isDraft: true
-          addChangeLog: false
-
-      
 
 - stage: docker
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
