--- a/.azure/build-template.yml
+++ b/.azure/build-template.yml
@@ -18,8 +18,9 @@ jobs:
       command: 'publish'
       publishWebProjects: false
       projects: '**/*.csproj'
-      zipAfterPublish: false
+      zipAfterPublish: true
       arguments: --configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory) --self-contained -r ${{ parameters.runtime }}
+  - pwsh: mv $(build.artifactstagingdirectory)/s.zip $(build.artifactstagingdirectory)/${{ parameters.artifact }}.zip
   - task: PublishBuildArtifacts@1
     inputs:
       PathtoPublish: '$(build.artifactstagingdirectory)'
