Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,7 @@ stages:
             tagSource: 'manual'
             tag: 'v$(Build.BuildNumber)'
             title: 'Release $(Build.BuildNumber)'
-            assets: '$(Pipeline.Workspace)/*.zip'
+            assets: '$(Pipeline.Workspace)/**/*.zip'
             isDraft: true
 
     
