Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,8 +51,7 @@ stages:
             title: 'Release $(Build.BuildNumber)'
             assets: '$(Pipeline.Workspace)/**/*.zip'
             isDraft: true
-
-    
+            addChangeLog: false
 
 - stage: docker
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
