--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,16 +44,12 @@ stages:
           inputs:
             gitHubConnection: 'github.com'
             repositoryName: 'mattiascibien/image-search-bot'
-            action: 'create'
-            target: '$(Build.BuildNumber)'
-            tagSource: 'manual'
-            tag: 'v$(Build.BuildNumber)'
-            title: 'Release $(Build.BuildNumber)'
+            tagSource: manual
+            tag: $(Build.BuildNumber)      
             assets: '$(Pipeline.Workspace)/**/*.zip'
             isDraft: true
             addChangeLog: false
-            releaseNotesSource: 'input'
-            releaseNotes: 'test'
+
 
 - stage: docker
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
