--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ stages:
         runtime: osx-x64
 
 - stage: github
+  #condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
   jobs:
     - job: github_release
       steps:
