--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: image-search-bot
-version: 0.1
+version: git
 summary: Configurable Telegram Bots that respond to image queries
 description: |
   Configurable apps for running Telegram Bots that responds to photo Image Queries
