--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,26 +31,26 @@ stages:
         artifact: macos
         runtime: osx-x64
 
-- stage: github
-  #condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
-  jobs:
-    - job: release
-      steps:
-        - checkout: none
-        - task: DownloadPipelineArtifact@2
-          inputs:
-            buildType: 'current'
-            targetPath: '$(Pipeline.Workspace)'
-        - task: GitHubRelease@0
-          inputs:
-            gitHubConnection: 'github.com'
-            repositoryName: 'mattiascibien/image-search-bot'
-            tagSource: manual
-            tag: v$(Build.BuildNumber)
-            title: Release v$(Build.BuildNumber)
-            assets: '$(Pipeline.Workspace)/**/*.zip'
-            isDraft: false
-            addChangeLog: true
+# - stage: github
+#   #condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+#   jobs:
+#     - job: release
+#       steps:
+#         - checkout: none
+#         - task: DownloadPipelineArtifact@2
+#           inputs:
+#             buildType: 'current'
+#             targetPath: '$(Pipeline.Workspace)'
+#         - task: GitHubRelease@0
+#           inputs:
+#             gitHubConnection: 'github.com'
+#             repositoryName: 'mattiascibien/image-search-bot'
+#             tagSource: manual
+#             tag: v$(Build.BuildNumber)
+#             title: Release v$(Build.BuildNumber)
+#             assets: '$(Pipeline.Workspace)/**/*.zip'
+#             isDraft: false
+#             addChangeLog: true
 
 - stage: snap
   #condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
@@ -58,7 +58,7 @@ stages:
     - job: release
       steps:
         - bash: docker pull snapcore/snapcraft:stable
-        - bash: docker run -v "$PWD":/build -w /build snapcore/snapcraft:stable snapcraft
+        - bash: docker run -v "$PWD":/build --net=host -w /build snapcore/snapcraft:stable snapcraft
         - bash: mv *.snap $(build.artifactstagingdirectory)
         - task: PublishBuildArtifacts@1
           inputs:
