--- a/.azure/build-template.yml
+++ b/.azure/build-template.yml
@@ -9,6 +9,10 @@ jobs:
     vmImage: ${{ parameters.vmImage }}
   continueOnError: false
   steps:
+  - task: UseDotNet@2
+    inputs:
+      packageType: sdk
+      version: 6.0.x
   - task: DotNetCoreCLI@2
     inputs:
       command: 'build'
