fix bug with new telgram bot keys and added another image search

--- a/sample.botconfig.json
+++ b/sample.botconfig.json
@@ -4,7 +4,7 @@
     "greetingsMessages" : [
       "Hello. I am Sample bot!",
       "Nice to meet you.",
-      "Ask me something.",
+      "Ask me something."
     ],
     "responses": [
       "Here you are.",
@@ -15,7 +15,7 @@
     ]
   },
   "imageSearchConfig": {
-    "type": "ImageSearchBot.ImageSearch.BingImageSearch",
+    "type": "ImageSearchBot.ImageSearch.GScraperImageSearch",
     "query": "sample query",
     "includeNsfw": false
   }
