--- a/image-search-bot.csproj
+++ b/image-search-bot.csproj
@@ -7,9 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="dotenv.net" Version="1.0.6" />
-		<PackageReference Include="Microsoft.Azure.CognitiveServices.Search.ImageSearch" Version="2.0.0" />
-		<PackageReference Include="Telegram.Bot" Version="14.12.0" />
+		<PackageReference Include="dotenv.net" Version="3.1.1" />
+		<PackageReference Include="GScraper" Version="1.1.0" />
+		<PackageReference Include="Microsoft.Azure.CognitiveServices.Search.BingImageSearch" Version="2.1.0-preview.1" />
+		<PackageReference Include="Telegram.Bot" Version="16.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -18,6 +19,9 @@
 		</None>
 		<None Update="mikesmother.botconfig.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="sample.botconfig.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
 
