--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,15 +59,11 @@ stages:
      continueOnError: false
      steps:
       - task: Docker@2
-        inputs:
-          command: 'build'
-          Dockerfile: '**/Dockerfile'
-      - task: Docker@2
+        displayName: 'Login To DockerHub'
         inputs:
           containerRegistry: 'DockerHub'
-          repository: 'mattiascibien/image-search-bot'
-          command: 'buildAndPush'
-          Dockerfile: '**/Dockerfile'
-          tags: |
-            $(Build.BuildNumber)
-            latest
+          command: 'login'
+      - bash: docker buildx create --bootstrap --driver docker-container --use --platform linux/amd64,linux/arm64
+        displayName: 'Create multi-arch Docker Builder'
+      - bash: cd $(Build.SourcesDirectory)/MonMusique.Bot/ && docker buildx build --no-cache --push --platform linux/amd64,linux/arm64 -f Dockerfile --tag mattiascibien/image-search-bot:latest --tag mattiascibien/image-search-bot:$(tag) .
+        displayName: 'Build and push Image'
